test/files/neg/symbolic-ops-deprecation.scala
// scalac: -deprecation -Xfatal-warnings
//
abstract class Foo {
  def +=(a: Int, b: Int): Foo
}
